2007-06-23  Adam Roben  <aroben@apple.com>

        Silence a build warning about not finding `num-cpus`

        Reviewed by Mark Rowe.

        * WebCore.vcproj/build-generated-files.sh: Look for num-cpus in its new
        location.

2007-06-22  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin.

        * plugins/win/PluginStreamWin.cpp:
        (WebCore::PluginStreamWin::didFinishLoading):
        No need to fetch the size from resourceData.

2007-06-22  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin.

        <rdar://problem/5288617>
        Crash playing a very large QuickTime movie inside Safari.

        Get rid of m_completeDeliveryData and use the loader's resource data instead. This reduces the memory usage for 
        plug-ins which loads large files and use a transfer mode of NP_ASFILE or NP_ASFILEONLY.
        
        * plugins/win/PluginStreamWin.cpp:
        (WebCore::PluginStreamWin::PluginStreamWin):
        (WebCore::PluginStreamWin::~PluginStreamWin):
        (WebCore::PluginStreamWin::didReceiveData):
        (WebCore::PluginStreamWin::didFinishLoading):
        * plugins/win/PluginStreamWin.h:

2007-06-22  Beth Dakin  <bdakin@apple.com>

        Reviewed by Oliver and Darin.

        Fix for <rdar://problem/5266999> Loading page from MangleMe fuzz 
        tester crashes in RenderTableRow::addChild (giant ROWSPAN)

        We already have code that tries to prevent allocating too-large 
        rowspans. The rowspan in this test, however, was small enough that 
        we thought it was okay in that code, even though clearly it was 
        still too large. I did a bunch of testing in Firefox, and it seems 
        that they set a hard limit on the maximum rowspan right in the DOM 
        -- 8k. So that is what this patch implements. 

        * html/HTMLTableCellElement.cpp:
        (WebCore::HTMLTableCellElement::parseMappedAttribute):

2007-06-22  Justin Garcia  <justin.garcia@apple.com>
