@@ -49,7 +49,10 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <div id="sidebar" class="focusable focused">
         <ol id="list"></ol>
         <ol id="status"></ol>
-        <div id="statusbar"><button id="statusToggle"></button><button id="attachToggle"></button></div>
+        <div id="statusbar">
+            <button id="statusToggle"></button><button id="attachToggle"></button>
+            <span id="sidebarResizeWidget"></span>
+        </div>
     </div>
     <div id="searchResults" class="focusable"></div>
     <div id="main" class="focusable blurred"></div>
